tests/paczka1/fuzzy1/34541057.err
Error in line 1: 5kWUQQoWvwO A491 34,2
Error in line 13: HiOp5ShFIo A768 19,4
Error in line 3: 5kWUQQoWvwO A768 65,3
Error in line 19: 5kWUQQoWvwO S625 62,4
Error in line 20: 5kWUQQoWvwO A768 2,4
Error in line 35: dnW S625 12,8
